--- a/traducir/traductor/src/translations/es/global_es.json
+++ b/traducir/traductor/src/translations/es/global_es.json
@@ -1,20 +1,55 @@
 {
-    "global": {
-      "Get on":"Subir/montarse y Ponerse, Llevarse (bien/mal) con alguien, llevar algo",
-      "Drive off":"Marcharse (en un vehículo) de algún lugar",
-      "Come back":"Volver a algún lugar",
-      "Turn round":"Cambiar de dirección, girarse",
-      "Break down":"Dejar de funcionar, dejar de operar (romperse)",
-      "Look out":"Ser cuidadoso, estar atento, permanecer atento",
-      "Take off":"Despegar",
-      "Get by":"Apañárselas",
-      "Run away (from)":"Escaparse, huir, alejarse",
-      "Keep up (with)":"Llevar el ritmo",
-      "Look up (at)":"Fijarse en algo",
-      "Look forward (to)":"Estar pendiente/emocionado por algo que va a pasar, esperar algo, mirar hacia adelante",
-      "Get in":"Entrar",
-      "Let yourself in":"Dejar entrar a alguien"
-      
-    }
+  "global":{
+    "Get on":"Subir/montarse y Ponerse, Llevarse (bien/mal) con alguien, llevar algo",
+    "Drive off":"Marcharse (en un vehículo) de algún lugar",
+    "Come back":"Volver a algún lugar",
+    "Turn round":"Cambiar de dirección, girarse",
+    "Break down":"Dejar de funcionar, dejar de operar (romperse)",
+    "Look out":"Ser cuidadoso, estar atento, permanecer atento",
+    "Take off":"Despegar",
+    "Get by":"Apañárselas",
+    "Run away (from)":"Escaparse, huir, alejarse",
+    "Keep up (with)":"Llevar el ritmo",
+    "Look up (at)":"Fijarse en algo",
+    "Look forward (to)":"Estar pendiente/emocionado por algo que va a pasar, esperar algo, mirar hacia adelante",
+    "Get in":"Entrar",
+    "Let yourself in":"Dejar entrar a alguien",
+    "Dive in":"Bucear, zambullirse, sumergirse.",
+    "Move in":"Mudarse, avanzar.",
+    "Check in (hotel,airport)":"Presentar documentos, registrarse.",
+    "Walk out":"Irse de algún lugar de repente.",
+    "Lock out":"Quedarse encerrado, no poder entrar.",
+    "Climb out":"Salir/subir con dificultades.",
+    "Check out":"Comprobar algo, pagar la cuenta, registrar la salida (hotel).",
+    "Drop/call in":"Visitar/encontrarse a alguien sin tener intención previa de hacerlo.",
+    "Join in":"Tomar parte en algún tipo de actividad que se está llevando a cabo.",
+    "Plug in":"Conectar algo a otra cosa (ejemplo conectar a la electricidad).",
+    "Fill in (U.K)-Fill out (U.S.A)":"Escribir, rellenar un formulario o documento.",
+    "Take somebody in":"Engañar, ser engañado.",
+    "Eat out":"Comer fuera.",
+    "Drop out":"Dejar de hacer algo justo antes de terminar.",
+    "Get out":"Evitar hacer algo, no tener que hacer algo nunca más.",
+    "Cut something out":"Recortar algo de un periódico o una revista, especialmente fotos o imágenes.",
+    "Leave something out":"Omitir algo, no incluirlo.",
+    "Cross/rub something +out":"Dibujar una línea alrededor para incluir o excluir algo.",
+    "Go out":"Que algo se apague por si sólo, hacer un esfuerzo, salir, pasar de moda.",
+    "Put out(a fire,a cigarette,a light)":"Extinguir, apagar algo.",
+    "Turn out (a light)":"Apagar (luces).",
+    "Blow out":"Apagar (normalmente fuego, velas), reventar algo (explosión), vaciar.",
+    "Work out":"Hacer ejercicio físico, desarrollarse, progresar, elaborar.",
+    "Work something out":"Calcular, pensar acerca de un problema y hallar la respuesta.",
+    "Carry out (order, experiment, survey)":"Hacer algo y finalizarlo (cumplir con algo, alguien).",
+    "Fall out (with somebody)":"Dejar de ser amigos.",
+    "Find out + THAT/WHAT/WHEN/WHO etc.":"Recoger/tener/descubrir /recopilar algo de información, hechos, situaciones.",
+    "As well as":"Así como, también, además de",
+    "And":"y",
+    "Second":"En segundo lugar",
+    "Then / Next":"Después / Luego",
+    "Moreover / Furthermore":"Además / Es más",
+    "In fact / As a matter of fact":"De hecho",
+    "Actually":"En realidad / De hecho",
+    "Anyway":"En cualquier caso / De todas formas",
+    "Besides":"Además / Aparte",
+    "By the way":"A propósito / Por cierto"
   }
-
+}
