--- a/traducir/traductor/src/translations/es/global_es.json
+++ b/traducir/traductor/src/translations/es/global_es.json
@@ -40,7 +40,7 @@
     "Work something out":"Calcular, pensar acerca de un problema y hallar la respuesta.",
     "Carry out (order, experiment, survey)":"Hacer algo y finalizarlo (cumplir con algo, alguien).",
     "Fall out (with somebody)":"Dejar de ser amigos.",
-    "Find out + THAT/WHAT/WHEN/WHO etc.":"Recoger/tener/descubrir /recopilar algo de información, hechos, situaciones.",
+    "Find out + THAT/WHAT/WHEN/WHO etc":"Recoger/tener/descubrir /recopilar algo de información, hechos, situaciones.",
     "As well as":"Así como, también, además de",
     "And":"y",
     "Second":"En segundo lugar",
